Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.


2007-Oct-11 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+ pcbnew
  * D_PAD::Draw() so that it shows SMD pads as greyed out when in high contrast
    mode and not on current layer.  Slight variation on this when laying down
    tracks: m_Route_Layer_BOTTOM or m_Route_Layer_TOP layers' SMD pads are 
    not greyed out.
  * Changed English UI text for "Cotation" to "Dimension".


2007-Oct-11 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ pcbnew
  * The "Target Properties" dialog box can now (otherwise) be cancelled by pressing
    the "Esc" key, and the caption of the "OK" button within the "Cotation
    properties" dialog box has been capitalised (so that an icon is now provided
    within that button within the Linux version of KiCad).
  * The pcbpiste.cpp file (which is no longer used) has been removed, and replaced
    with pcbpiste.cpp.notused
+ cvpcb
  * The affiche.cpp file (which is no longer used) has been removed, and replaced
    with affiche.cpp.notused


2007-Oct-11 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ pcbnew
  * The previously provided "Exit" button within the "Colors:" dialog box has been
    replaced with "OK", "Cancel", and "Apply" buttons, and the code for editing the
    visibility of the Grid layer from that dialog now is "cleaner" than before.
    Details associated with buttons within that dialog box moved from set_color.cpp
    to set_color.h (matching implementation for GerbView's corresponding dialog box).
  * Fixed bug which previously prevented the Copper layer from being selected as the